--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "svelte": "^3.55.1",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.1.0"
   },
   "dependencies": {
