--- a/client/package.json
+++ b/client/package.json
@@ -1,28 +1,29 @@
 {
   "name": "client",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "postinstall": "patch-package"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "svelte": "^3.55.1",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.1.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
-    "@ethersproject/providers": "^5.7.2",
-    "@svelteuidev/composables": "^0.10.0",
-    "@svelteuidev/core": "^0.10.0",
-    "ethers": "^5.5.4",
-    "svelte-routing": "^1.6.0",
-    "web3modal": "^1.9.12"
+    "@thirdweb-dev/react": "^3",
+    "@thirdweb-dev/sdk": "^3",
+    "ethers": "^5",
+    "next": "^13",
+    "react": "^18.2",
+    "react-dom": "^18.2",
+    "react-toastify": "^9.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.11.0",
+    "eslint-config-next": "^13",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
