--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@thirdweb-dev/sdk": "^3",
     "crypto-js": "^4.1.1",
     "ethers": "^5",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
     "next": "^13",
     "react": "^18.2",
     "react-dom": "^18.2",
