--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-toastify": "^9.1.3",
+    "short-unique-id": "^4.4.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
